--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,3 +18,14 @@ $light-black: rgba( 0,0,0,.5);
   -moz-box-shadow: 0 $size  $light-white;
   box-shadow: 0 $size  $light-white;
 }
+@mixin clearfix {
+  *zoom:1;
+  &:before,
+  &:after {
+    content:"";
+    display:table;
+  }
+  &:after {
+    clear: both;
+  }
+}
