--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,3 @@
-$visual-grid: true;
 
 @import "../bower_components/bourbon/app/assets/stylesheets/bourbon";
 @import '../bower_components/neat/app/assets/stylesheets/neat';
@@ -167,9 +166,10 @@ time {
   @include span-columns(4 of 8);
 }
 .skateboards {
-  margin-top: 30px;
+  margin: 30px 0;
  @include span-columns(12);
   background-color: #fff;
+  @include clearfix;
 }
 .skateboards ul {
   margin-left: 30px;
@@ -178,7 +178,45 @@ time {
 .skateboards li {
   display: inline-block;
   padding: 1em;
+
 }
 .contact {
-  color: rgba(50, 52, 46, 1);
+  @include clearfix;
+  margin-top: 113px;
+  @include outer-container();
+  background-color: #fff;
+  color: rgba(148, 148, 148, 1);
+}
+.nav2 {
+  @include span-columns(6);
+
+}
+.nav2 li {
+  text-decoration: none;
+  display: inline-block;
+  margin-left: 5px;
+}
+.contact-info {
+  @include span-columns(6);
+  text-transform: uppercase;
+
+}
+.contact-info div {
+
+  border: 1px solid grey;
+  height: 40px;
+  -webkit-box-shadow: inset 3px 4px 0px grey;
+  -moz-box-shadow: inset 3px 4px 0px  grey;
+  box-shadow: inset 3px 4px 0px  grey;
+  padding-right: 20px;
+  margin: 9px 25px 10px 0;
+  
+}
+.contact-info span {
+  padding-left: 42px;
+  line-height: 42px;
+
+}
+div.message{
+  height: 100px;
 }
